crates/cobrust-lsp/tests/snapshots/hover_completion_e2e__snapshot_completion_prefix_print.snap
---
source: crates/cobrust-lsp/tests/hover_completion_e2e.rs
assertion_line: 233
expression: resp
snapshot_kind: text
---
[
  {
    "label": "print",
    "kind": 3,
    "detail": "(s: Any) -> None",
    "sortText": "0_print"
  }
]
