crates/cobrust-lsp/tests/snapshots/hover_completion_e2e__snapshot_hover_none_on_unknown.snap
---
source: crates/cobrust-lsp/tests/hover_completion_e2e.rs
assertion_line: 206
expression: hover
snapshot_kind: text
---
null
