crates/cobrust-lsp/tests/snapshots/hover_completion_e2e__snapshot_hover_str_binding.snap
---
source: crates/cobrust-lsp/tests/hover_completion_e2e.rs
assertion_line: 192
expression: hover
snapshot_kind: text
---
{
  "contents": {
    "kind": "markdown",
    "value": "**s**: `str`\n\nInferred type."
  },
  "range": {
    "start": {
      "line": 0,
      "character": 4
    },
    "end": {
      "line": 0,
      "character": 5
    }
  }
}
